--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.3",
-    "graphql": "^16.10.0"
+    "graphql": "^16.10.0",
+    "nanoid": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
