--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.3",
+    "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
+    "mongoose": "^8.12.1",
     "nanoid": "^5.1.2"
   },
   "devDependencies": {
