--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "mongoose": "^8.12.1",
+    "mongoose-unique-validator": "github:mongoose-unique-validator/mongoose-unique-validator",
     "nanoid": "^5.1.2"
   },
   "devDependencies": {
